--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
         message: "Latest data"
         
     - name: Slack Notification on SUCCESS
-      if: success()
+      if: (success() && steps.add_commit.outputs.committed=='false')
       uses: tokorom/action-slack-incoming-webhook@main
       env:
           INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
       with:
-          text: A successful scrape from Iris!
+          text: A successful scrape from Iris but nothing new!
           
     - name: Slack Notification on FAILURE
       if: failure()
@@ -53,4 +53,30 @@ jobs:
                     }
                 ]
                 }
-            ] 
+            ]
+            
+    - name: Slack Notification on new commits
+      if: (success() && steps.add_commit.outputs.committed=='true')
+      uses: tokorom/action-slack-incoming-webhook@main
+      env:
+        INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+      with:
+        text: IRIS new file alert!!!
+        attachments: |
+          [
+              {
+              "color": "good",
+              "author_name": "${{ github.actor }}",
+              "author_icon": "${{ github.event.sender.avatar_url }}",
+              "fields": [
+                  {
+                  "title": "GitHub Actions URL",
+                  "value": "https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}"
+                  },
+                  {
+                  "title": "Commit URL",
+                  "value": "https://github.com/${{github.repository}}/commits"
+                  }
+              ]
+              }
+          ] 
