--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: '3.9'
     - run: pip install notebook requests bs4
     - name: Run scraper
-      run: jupyter execute x.ipynb
+      run: jupyter execute scape.ipynb
 
     - name: Add and commit
       id: add_commit
